--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,10 @@ jobs:
     environment: testing
     runs-on: ubuntu-latest
     # Now the test Jib will run on node container hosted by ubuntu-latest
-    container: node:20-alpine
+    # container: node:20-alpine
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb
-      MONGODB_CLUSTER_ADDRESS: mongodb
+      MONGODB_CLUSTER_ADDRESS: 127.0.0.1:2717
       MONGODB_USERNAME: root
       MONGODB_PASSWORD: example
       PORT: 8080
@@ -24,6 +24,8 @@ jobs:
     services:
       mongodb:
         image: mongodb
+        ports: 
+          - 2710:2717
         env:
           MONGO_INITDB_ROOT_USERNAME: root
           MONGO_INITDB_ROOT_PASSWORD: example
